# lpts

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake  onboarding.md
.cache/clangd/: compile_commands.json
.claude/: settings.json  settings.local.json
.claude/projects/-home-ila-Code-lpts/memory/: MEMORY.md  feedback_build_command.md
.claude/skills/explain-lpts/: SKILL.md
.claude/skills/explain-lpts-ddl/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/write-docs/: SKILL.md
.github/workflows/: MainDistributionPipeline.yml
benchmark/sqlstorm/: lpts_sqlstorm_benchmark.cpp
src/: cte_nodes.cpp  logical_plan_to_sql.cpp  lpts_ast.cpp  lpts_ast_renderer.cpp  lpts_extension.cpp  lpts_helpers.cpp  lpts_pipeline.cpp
src/include/: cte_nodes.hpp  logical_plan_to_sql.hpp  lpts_ast.hpp  lpts_ast_renderer.hpp  lpts_debug.hpp  lpts_extension.hpp  lpts_helpers.hpp  lpts_pipeline.hpp
test/sql/: between.test  cast.test  cross_product.test  cte.test  distinct.test  ducklake.test  functions.test  group_by.test  having.test  join.test  lambda.test  lateral_join.test  mark_join_empty.test  operators.test  optimizer.test  order_limit.test  pragmas.test  print_ast.test  rendering_edges.test  select.test  setops_unnest.test  single_join.test  sqlstorm_errors.test  tpch.test  union.test  window.test
